@@ -1,3 +1,8 @@
+Wed Mar  2 20:56:42 UTC 2011  Olli Savia  <ops@iki.fi>
+
+        * ace/config-linux-common.h:
+          Removed some ancient settings.
+
 Wed Mar  2 12:42:58 UTC 2011  Olli Savia  <ops@iki.fi>
 
         * ace/config-linux-common.h:
